# mercado_project

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml  testing.yml
app/: main.py  test_main.py
app/db_ops/: crud.py  models.py  schemas.py
app/routers/: produto_compras.py
