[tool.poetry]
name = "mercado-project"
version = "0.1.0"
description = ""
authors = ["sebasthub <playandroidhb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
httpx = "^0.27.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
